--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /PrimerEjercicioJava/build/
 /Examen2016/nbproject/private/
 /Examen2016/build/
+/Examen_Alejandro_Gomez/nbproject/private/
+/Examen_Alejandro_Gomez/build/
