Ajedrez pa echarnos partidillas

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /Examen2016/build/
 /Examen_Alejandro_Gomez/nbproject/private/
 /Examen_Alejandro_Gomez/build/
+/Ajedrez/nbproject/private/
+/Ajedrez/build/
+/Juego/nbproject/private/
