--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Ajedrez/nbproject/private/
 /Ajedrez/build/
 /Juego/nbproject/private/
+/PracticaSAX_XML/nbproject/private/
+/PracticaSAX_XML/build/
