Me cago en mi vida

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /Coranzoncitos/build/
 /Hibernate/nbproject/private/
 /Hibernate/build/
+/EjemploCriaturitasHibernate/nbproject/private/
+/EjemploCriaturitasHibernate/build/
