--- a/EjemploCriaturitasHibernate/nbproject/project.properties
+++ b/EjemploCriaturitasHibernate/nbproject/project.properties
@@ -28,16 +28,27 @@ dist.jar=${dist.dir}/EjemploCriaturitasHibernate.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.antlr-2.7.7.jar=C:\\Users\\agomez\\Desktop\\hibernate-release-5.2.12.Final\\lib\\required\\antlr-2.7.7.jar
+file.reference.antlr-2.7.7.jar-1=C:\\Hibernate\\hibernate-release-5.3.0.Beta1\\hibernate-release-5.3.0.Beta1\\lib\\required\\antlr-2.7.7.jar
 file.reference.classmate-1.3.0.jar=C:\\Users\\agomez\\Desktop\\hibernate-release-5.2.12.Final\\lib\\required\\classmate-1.3.0.jar
+file.reference.classmate-1.3.0.jar-1=C:\\Hibernate\\hibernate-release-5.3.0.Beta1\\hibernate-release-5.3.0.Beta1\\lib\\required\\classmate-1.3.0.jar
 file.reference.dom4j-1.6.1.jar=C:\\Users\\agomez\\Desktop\\hibernate-release-5.2.12.Final\\lib\\required\\dom4j-1.6.1.jar
+file.reference.dom4j-1.6.1.jar-1=C:\\Hibernate\\hibernate-release-5.3.0.Beta1\\hibernate-release-5.3.0.Beta1\\lib\\required\\dom4j-1.6.1.jar
 file.reference.hibernate-commons-annotations-5.0.1.Final.jar=C:\\Users\\agomez\\Desktop\\hibernate-release-5.2.12.Final\\lib\\required\\hibernate-commons-annotations-5.0.1.Final.jar
+file.reference.hibernate-commons-annotations-5.0.1.Final.jar-1=C:\\Hibernate\\hibernate-release-5.3.0.Beta1\\hibernate-release-5.3.0.Beta1\\lib\\required\\hibernate-commons-annotations-5.0.1.Final.jar
 file.reference.hibernate-core-5.2.12.Final.jar=C:\\Users\\agomez\\Desktop\\hibernate-release-5.2.12.Final\\lib\\required\\hibernate-core-5.2.12.Final.jar
+file.reference.hibernate-core-5.3.0.Beta1.jar=C:\\Hibernate\\hibernate-release-5.3.0.Beta1\\hibernate-release-5.3.0.Beta1\\lib\\required\\hibernate-core-5.3.0.Beta1.jar
 file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=C:\\Users\\agomez\\Desktop\\hibernate-release-5.2.12.Final\\lib\\required\\hibernate-jpa-2.1-api-1.0.0.Final.jar
 file.reference.jandex-2.0.3.Final.jar=C:\\Users\\agomez\\Desktop\\hibernate-release-5.2.12.Final\\lib\\required\\jandex-2.0.3.Final.jar
+file.reference.jandex-2.0.3.Final.jar-1=C:\\Hibernate\\hibernate-release-5.3.0.Beta1\\hibernate-release-5.3.0.Beta1\\lib\\required\\jandex-2.0.3.Final.jar
 file.reference.javassist-3.20.0-GA.jar=C:\\Users\\agomez\\Desktop\\hibernate-release-5.2.12.Final\\lib\\required\\javassist-3.20.0-GA.jar
+file.reference.javassist-3.22.0-GA.jar=C:\\Hibernate\\hibernate-release-5.3.0.Beta1\\hibernate-release-5.3.0.Beta1\\lib\\required\\javassist-3.22.0-GA.jar
+file.reference.javax.persistence-api-2.2.jar=C:\\Hibernate\\hibernate-release-5.3.0.Beta1\\hibernate-release-5.3.0.Beta1\\lib\\required\\javax.persistence-api-2.2.jar
 file.reference.jboss-logging-3.3.0.Final.jar=C:\\Users\\agomez\\Desktop\\hibernate-release-5.2.12.Final\\lib\\required\\jboss-logging-3.3.0.Final.jar
+file.reference.jboss-logging-3.3.1.Final.jar=C:\\Hibernate\\hibernate-release-5.3.0.Beta1\\hibernate-release-5.3.0.Beta1\\lib\\required\\jboss-logging-3.3.1.Final.jar
 file.reference.jboss-transaction-api_1.2_spec-1.0.1.Final.jar=C:\\Users\\agomez\\Desktop\\hibernate-release-5.2.12.Final\\lib\\required\\jboss-transaction-api_1.2_spec-1.0.1.Final.jar
+file.reference.jboss-transaction-api_1.2_spec-1.0.1.Final.jar-1=C:\\Hibernate\\hibernate-release-5.3.0.Beta1\\hibernate-release-5.3.0.Beta1\\lib\\required\\jboss-transaction-api_1.2_spec-1.0.1.Final.jar
 file.reference.sqljdbc4.jar=C:\\Users\\agomez\\Desktop\\Microsoft JDBC Driver 4.0 for SQL Server\\sqljdbc_4.0\\esn\\sqljdbc4.jar
+file.reference.sqljdbc4.jar-1=C:\\sqljdbc_4.0\\esn\\sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -51,7 +62,18 @@ javac.classpath=\
     ${file.reference.javassist-3.20.0-GA.jar}:\
     ${file.reference.jboss-logging-3.3.0.Final.jar}:\
     ${file.reference.jboss-transaction-api_1.2_spec-1.0.1.Final.jar}:\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.antlr-2.7.7.jar-1}:\
+    ${file.reference.classmate-1.3.0.jar-1}:\
+    ${file.reference.dom4j-1.6.1.jar-1}:\
+    ${file.reference.hibernate-commons-annotations-5.0.1.Final.jar-1}:\
+    ${file.reference.hibernate-core-5.3.0.Beta1.jar}:\
+    ${file.reference.jandex-2.0.3.Final.jar-1}:\
+    ${file.reference.javassist-3.22.0-GA.jar}:\
+    ${file.reference.javax.persistence-api-2.2.jar}:\
+    ${file.reference.jboss-logging-3.3.1.Final.jar}:\
+    ${file.reference.jboss-transaction-api_1.2_spec-1.0.1.Final.jar-1}:\
+    ${file.reference.sqljdbc4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
